Revise README with setup steps and technology details
Updated setup instructions and clarified technology stack.